<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.login.LoginFragment">

    <data>

        <import type="android.view.View" />

        <variable
            name="model"
            type="com.borjali.presentation.ui.login.LoginViewModel" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:background="@drawable/app_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:scaleType="centerInside"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/inputEmailSignIn"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.16000003"
            app:srcCompat="@drawable/ic_logo"
            tools:ignore="ContentDescription" />

        <com.borjali.presentation.ui.component.CustomInputText
            android:id="@+id/inputEmailSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="32dp"
            android:textColorHint="@color/gray"
            app:hint="@string/login_email"
            app:isFocusable="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2"
            app:textColor="@color/gray"
            app:type="email" />

        <com.borjali.presentation.ui.component.CustomInputText
            android:id="@+id/inputPasswordSignIn"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:textColorHint="@color/gray"
            app:hint="@string/login_password"
            app:isFocusable="false"
            app:layout_constraintEnd_toEndOf="@+id/inputEmailSignIn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputEmailSignIn"
            app:layout_constraintTop_toBottomOf="@+id/inputEmailSignIn"
            app:type="password" />

        <TextView
            android:id="@+id/forget_password"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="center"
            android:text="@string/forget_password"
            android:textColor="@color/gray_5"
            android:textSize="@dimen/normalText"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="@+id/sign_in"
            app:layout_constraintStart_toStartOf="@+id/sign_in"
            app:layout_constraintTop_toBottomOf="@+id/sign_in"
            tools:ignore="VisualLintBounds" />


        <com.borjali.presentation.ui.component.CustomButton
            android:id="@+id/sign_in"
            style="@style/Widget.customButton.active"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="120dp"
            app:buttonText="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/inputPasswordSignIn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/inputPasswordSignIn"
            app:layout_constraintTop_toBottomOf="@+id/inputPasswordSignIn"
            tools:ignore="TouchTargetSizeCheck,VisualLintBounds" />

        <TextView
            android:id="@+id/log_in_text_icon"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:fontFamily="@font/poppins_bold"
            android:gravity="left|center_vertical"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="@+id/imageView2"
            app:layout_constraintEnd_toEndOf="@+id/inputEmailSignIn"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toTopOf="@+id/imageView2"
            app:layout_constraintVertical_bias="0.0" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    </layout>