<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/toolbar_title"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:contentDescription="@string/image_description"
                android:fontFamily="@font/poppins_bold"
                android:gravity="left|center_vertical"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:id="@+id/back_button"
                android:layout_width="50dp"
                android:layout_height="45dp"
                android:contentDescription="@string/image_description"
                android:padding="@dimen/_8sdp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:srcCompat="?android:attr/actionModeCloseDrawable"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/change_locale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="-8dp"
                android:background="@color/transparent"
                android:textColor="@color/white"
                app:icon="@drawable/ic_language"
                app:iconGravity="start"
                android:fontFamily="@font/poppins_bold"
                app:iconTint="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <ImageView
                android:id="@+id/menu_toolbar"
                android:layout_width="20dp"
                android:layout_height="35dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/image_description"
                android:padding="4dp"
                android:scaleType="centerInside"
                android:src="@drawable/union"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5"
                app:tint="@color/white"
                tools:ignore="ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/nav_host"
            android:name="androidx.navigation.fragment.NavHostFragment"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            app:defaultNavHost="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:navGraph="@navigation/nav_graph" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/internet_error_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/app_background"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/nav_host"
            app:layout_constraintEnd_toEndOf="@+id/nav_host"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/nav_host"
            app:layout_constraintTop_toTopOf="@+id/nav_host"
            app:layout_constraintVertical_bias="0.0"
            tools:visibility="visible">


            <TextView
                android:id="@+id/ic_internet"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:background="@drawable/ic_no_internet"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.3" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/no_internet_title"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="@+id/ic_internet"
                app:layout_constraintStart_toStartOf="@+id/ic_internet"
                app:layout_constraintTop_toBottomOf="@+id/ic_internet" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/poppins_medium"
                android:text="@string/internt_description"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/textView2"
                app:layout_constraintStart_toStartOf="@+id/textView2"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/button_retry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="50dp"
                android:layout_marginTop="32dp"
                android:minWidth="120dp"
                android:background="@drawable/input_background_deactivate"
                android:backgroundTint="@color/colorPrimary"
                android:fontFamily="@font/poppins_bold"
                android:text="@string/retry"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="@+id/textView3"
                app:layout_constraintStart_toStartOf="@+id/textView3"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>